--- a/css/rental.css
+++ b/css/rental.css
@@ -1,8 +1,29 @@
 #pageContent {
-    text-align: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-content: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.rentalMainBox {
+    /*background-color: #cc0000;*/
+    width: 200px;
+    height: 300px;
+    max-width: 200px;
+    max-height: 300px;
+    margin: 10px;
 }
 
-.rental {
-    max-height: 200px;
-    margin: 10px;
+.rentalBoxImg {
+    /*background-color: purple;*/
+    width: 200px;
+    height: 200px;
+}
+
+.rentalBoxText {
+    /*background-color: green;*/
+    width: 200px;
+    text-align: center;
+    height: 100px;
 }
