Rentals are loading from DB.

--- a/templates/rental.html
+++ b/templates/rental.html
@@ -6,7 +6,7 @@
 <link href="css/rental.css" rel="stylesheet" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/main.js"></script>
-<script src="js/index.js"></script>
+<script src="js/rental.js"></script>
 
 <!-- jQuery Modal Plugin -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
@@ -27,114 +27,7 @@
 </div>
 <!-- Content -->
 <div id="pageContent">
-    <div class="rentalMainBox">
-        <div class="rentalBoxImg"><img class="rentalBoxImg" src="images/hammer.jpg"/></div>
-        <div class="rentalBoxText">
-            JohnsHammer<br>
-            John Smith (4.9/5)<br>
-            Location: Charlotte, NC<br>
-            593 Reviews<br>
-        </div>
-    </div>
-    <div class="rentalMainBox">
-        <div class="rentalBoxImg"><img class="rentalBoxImg" src="images/hammer.jpg"/></div>
-        <div class="rentalBoxText">
-            JohnsHammer<br>
-            John Smith (4.9/5)<br>
-            Location: Charlotte, NC<br>
-            593 Reviews<br>
-        </div>
-    </div>
-    <div class="rentalMainBox">
-        <div class="rentalBoxImg"><img class="rentalBoxImg" src="images/hammer.jpg"/></div>
-        <div class="rentalBoxText">
-            JohnsHammer<br>
-            John Smith (4.9/5)<br>
-            Location: Charlotte, NC<br>
-            593 Reviews<br>
-        </div>
-    </div>
-    <div class="rentalMainBox">
-        <div class="rentalBoxImg"><img class="rentalBoxImg" src="images/hammer.jpg"/></div>
-        <div class="rentalBoxText">
-            JohnsHammer<br>
-            John Smith (4.9/5)<br>
-            Location: Charlotte, NC<br>
-            593 Reviews<br>
-        </div>
-    </div>
-    <div class="rentalMainBox">
-        <div class="rentalBoxImg"><img class="rentalBoxImg" src="images/hammer.jpg"/></div>
-        <div class="rentalBoxText">
-            JohnsHammer<br>
-            John Smith (4.9/5)<br>
-            Location: Charlotte, NC<br>
-            593 Reviews<br>
-        </div>
-    </div>
-    <div class="rentalMainBox">
-        <div class="rentalBoxImg"><img class="rentalBoxImg" src="images/hammer.jpg"/></div>
-        <div class="rentalBoxText">
-            JohnsHammer<br>
-            John Smith (4.9/5)<br>
-            Location: Charlotte, NC<br>
-            593 Reviews<br>
-        </div>
-    </div>
-    <div class="rentalMainBox">
-        <div class="rentalBoxImg"><img class="rentalBoxImg" src="images/hammer.jpg"/></div>
-        <div class="rentalBoxText">
-            JohnsHammer<br>
-            John Smith (4.9/5)<br>
-            Location: Charlotte, NC<br>
-            593 Reviews<br>
-        </div>
-    </div>
-    <div class="rentalMainBox">
-        <div class="rentalBoxImg"><img class="rentalBoxImg" src="images/hammer.jpg"/></div>
-        <div class="rentalBoxText">
-            JohnsHammer<br>
-            John Smith (4.9/5)<br>
-            Location: Charlotte, NC<br>
-            593 Reviews<br>
-        </div>
-    </div>
-    <div class="rentalMainBox">
-        <div class="rentalBoxImg"><img class="rentalBoxImg" src="images/hammer.jpg"/></div>
-        <div class="rentalBoxText">
-            JohnsHammer<br>
-            John Smith (4.9/5)<br>
-            Location: Charlotte, NC<br>
-            593 Reviews<br>
-        </div>
-    </div>
-    <div class="rentalMainBox">
-        <div class="rentalBoxImg"><img class="rentalBoxImg" src="images/hammer.jpg"/></div>
-        <div class="rentalBoxText">
-            JohnsHammer<br>
-            John Smith (4.9/5)<br>
-            Location: Charlotte, NC<br>
-            593 Reviews<br>
-        </div>
-    </div>
-    <div class="rentalMainBox">
-        <div class="rentalBoxImg"><img class="rentalBoxImg" src="images/hammer.jpg"/></div>
-        <div class="rentalBoxText">
-            JohnsHammer<br>
-            John Smith (4.9/5)<br>
-            Location: Charlotte, NC<br>
-            593 Reviews<br>
-        </div>
-    </div>
-    <div class="rentalMainBox">
-        <div class="rentalBoxImg"><img class="rentalBoxImg" src="images/hammer.jpg"/></div>
-        <div class="rentalBoxText">
-            JohnsHammer<br>
-            John Smith (4.9/5)<br>
-            Location: Charlotte, NC<br>
-            593 Reviews<br>
-        </div>
-    </div>
+
 </div>
 
 <!--End of Content -->
