login/logout working

--- a/templates/logout.html
+++ b/templates/logout.html
@@ -4,11 +4,10 @@
 
 <link href="css/global.css" rel="stylesheet" />
 <link href="css/index.css" rel="stylesheet" />
-<link href="css/login.css" rel="stylesheet" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/main.js"></script>
 <script src="js/index.js"></script>
-<script src="js/login.js"></script>
+<script src="js/logout.js"></script>
 
 <!-- jQuery Modal Plugin -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
@@ -33,16 +32,7 @@
 </div>
 <!-- Content -->
 <div id="pageContent">
-    <div id="loginContent">
-        <h1>Login</h1>
-        <div id="loginErrMsg"></div>
-        <p><label for="txtUser">Username</label><br>
-            <input type="text" placeholder="Username" id="txtUser" name="txtUser"/></p>
-        <p><label for="txtPass">Password</label><br>
-            <input type="password" placeholder="Password" id="txtPass" name="txtPass"/></p>
-        <p><input type="button" value="Login" id="btnLogin"/></p>
-        <p><input type="button" value="Register" id="btnRegister"/></p>
-    </div>
+    Logging out...
 </div>
 
 <!--End of Content -->
