--- a/templates/register.html
+++ b/templates/register.html
@@ -17,6 +17,10 @@
 <!-- jQuery UI -->
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
+<!-- MD5 -->
+<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/core.js'></script>
+<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/md5.js'></script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
