--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <!-- References -->
 
-<link href="css/global.css" rel="stylesheet" />
-<link href="css/login.css" rel="stylesheet" />
+<link href="/css/global.css" rel="stylesheet" />
+<link href="/css/profile.css" rel="stylesheet" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="js/main.js"></script>
-<script src="js/login.js"></script>
+<script src="/js/main.js"></script>
+<script src="/js/profile.js"></script>
 
 <!-- jQuery Modal Plugin -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
@@ -31,15 +31,34 @@
 </div>
 <!-- Content -->
 <div id="pageContent">
-    <div id="loginContent">
-        <h1>Login</h1>
-        <div id="loginErrMsg"></div>
-        <p><label for="txtUser">Username</label><br>
-            <input type="text" placeholder="Username" id="txtUser" name="txtUser"/></p>
-        <p><label for="txtPass">Password</label><br>
-            <input type="password" placeholder="Password" id="txtPass" name="txtPass"/></p>
-        <p><input type="button" value="Login" id="btnLogin"/></p>
-        <p><input type="button" value="Register" id="btnRegister"/></p>
+    <div id="profileLeft">
+        <div id="profileTitle">Test User</div>
+        <div id="profilePicture"><img id="userImage" src="/images/profile/default.png"/></div>
+        <div id="profileDescription">text text text text text text text text text text text text
+        text text text text text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text text text text text
+        text text text text text text text text text text text text text text text text text text </div>
+    </div>
+    <div id="profileRight">
+        <div id="profileListings">
+            <div id="profileListingsPageLeft">
+                <div id="left_arrow_box">
+                    <div class="arrow" id="left_arrow"></div>
+                </div>
+            </div>
+            <div id="profileListingsContent">
+
+            </div>
+            <div id="profileListingsPageRight">
+                <div id="right_arrow_box">
+                    <div class="arrow" id="right_arrow"></div>
+                </div>
+            </div>
+        </div>
+        <div id="profileListingsReviews">
+            
+        </div>
     </div>
 </div>
 
