--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,9 @@
 
 <link href="css/global.css" rel="stylesheet" />
 <link href="css/index.css" rel="stylesheet" />
+<link href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.min.css" rel="stylesheet" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.min.js"></script>
 <script src="js/main.js"></script>
 <script src="js/index.js"></script>
 
@@ -38,6 +40,19 @@
                 you have been looking for to finish that long awaited project
 
             </p>
+
+            <div class="featured">
+                <h1>Featured producted</h1>
+                <div class="slider">
+                    <ul id="slider">
+                        <li><img src="images/Hammer.jpg" alt="" title="Hammer"></li>
+                        <li><img src="images/hachet.jpg" alt="" title="hachet"></li>
+                        <li><img src="images/chainsaw.jpg" alt="" title="wrenchset"></li>
+                        <li><img src="images/wrenchset.jpg" alt="" title="chainsaw"></li>
+                        
+                    </ul>
+                </div>
+            </div>
 
         </div>
         <div id="indexCol_3">
