--- a/templates/profile.html
+++ b/templates/profile.html
@@ -32,8 +32,8 @@
 <!-- Content -->
 <div id="pageContent">
     <div id="profileLeft">
-        <div id="profileTitle">Test User</div>
         <div id="profilePicture"><img id="userImage" src="/images/profile/default.png"/></div>
+        <div id="profileTitle">Test User</div>
         <div id="profileDescription">text text text text text text text text text text text text
         text text text text text text text text text text text text text text text text text text
         text text text text text text text text text text text text text text text text text text
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div id="profileListingsContent">
-
+                <div class="profileListingItem"></div>
             </div>
             <div id="profileListingsPageRight">
                 <div id="right_arrow_box">
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div id="profileListingsReviews">
-            
+
         </div>
     </div>
 </div>
