Profile avatar, name, and description loaded from database.

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -32,13 +32,9 @@
 <!-- Content -->
 <div id="pageContent">
     <div id="profileLeft">
-        <div id="profilePicture"><img id="userImage" src="/images/profile/default.png"/></div>
+        <div id="profilePicture"><img id="userImage" src=""/></div>
         <div id="profileTitle">Test User</div>
-        <div id="profileDescription">text text text text text text text text text text text text
-        text text text text text text text text text text text text text text text text text text
-        text text text text text text text text text text text text text text text text text text
-        text text text text text text text text text text text text text text text text text text
-        text text text text text text text text text text text text text text text text text text </div>
+        <div id="profileDescription"></div>
     </div>
     <div id="profileRight">
         <div id="profileListings">
