--- a/templates/css/profile.css
+++ b/templates/css/profile.css
@@ -47,8 +47,7 @@
 #profileListings {
     display: flex;
     width: 100%;
-    height: 30%;
-    max-height: 300px;
+    height: 200px;
     margin-bottom: 5px;
 }
 
@@ -66,16 +65,16 @@
     display: flex;
     justify-content: flex-start;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
-    overflow: hidden;
-    overflow-y: hidden;
     flex-grow: 1;
 }
 
 .profileListingItem {
     background-color: #cc0000;
     display: flex;
-    height: 100%;
+    justify-content: center;
+    height: 150px;
     width: 200px;
     margin: 0px 10px;
 }
@@ -93,8 +92,31 @@
     background-color: yellow;
     margin-top: 5px;
     display: flex;
+    flex-direction: row;
     flex-grow: 1;
     width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.profileReviewBox {
+    background-color: lime;
+    min-width: 80%;
+    height: 100px;
+    margin: 5px;
+}
+
+.profileReviewerPhoto {
+
+}
+
+.profileReviewerName {
+
+}
+
+.profileReviewText {
+
 }
 
 #pageContent {
