--- a/templates/profile.html
+++ b/templates/profile.html
@@ -33,7 +33,7 @@
 <div id="pageContent">
     <div id="profileLeft">
         <div id="profilePicture"><img id="userImage" src=""/></div>
-        <div id="profileTitle">Test User</div>
+        <div id="profileTitle"></div>
         <div id="profileDescription"></div>
     </div>
     <div id="profileRight">
