--- a/templates/logout.html
+++ b/templates/logout.html
@@ -3,10 +3,8 @@
 <!-- References -->
 
 <link href="css/global.css" rel="stylesheet" />
-<link href="css/index.css" rel="stylesheet" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="js/main.js"></script>
-<script src="js/index.js"></script>
+<script src="js/main.js"></script>=
 <script src="js/logout.js"></script>
 
 <!-- jQuery Modal Plugin -->
