Made an about us page and add profile button
Just made an about page and added a button to the when you are logged in you can access your profile.

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -4,11 +4,9 @@
 
 <link href="css/global.css" rel="stylesheet" />
 <link href="css/index.css" rel="stylesheet" />
-<link href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.min.css" rel="stylesheet" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.min.js"></script>
 <script src="js/main.js"></script>
-<script src="js/index.js"></script>
+<script src="js/login.js"></script>
 
 <!-- jQuery Modal Plugin -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
@@ -17,15 +15,19 @@
 <!-- jQuery UI -->
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
+<!-- MD5 -->
+<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/core.js'></script>
+<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/md5.js'></script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="pageTitle"></title>
+    <title id="About Us"></title>
 </head>
 <body>
 <!-- Navbar -->
 <div id="navbar">
-<!-- Load with JS in main.js -->
+    <!-- Load with JS in main.js -->
 </div>
 <!-- Content -->
 <div id="pageContent">
@@ -34,25 +36,14 @@
             
         </div>
         <div id="indexCol_2">
-            <h1>Welcome to Neighborly</h1>
+            <h1>About us</h1>
 
-            <p>This is the place where you come and look for the tools that 
-                you have been looking for to finish that long awaited project
-
+            <p>Neighborly is about this community and helping serve the community. What we choose to accomplish is allowing the community to work together in finishing projects that are long over due.
+                 We want to give those people a safe environment to help others and in the same process allow to make some money when their tools are not in use. 
             </p>
 
-            <div class="featured">
-                <h1>Featured producted</h1>
-                <div class="slider">
-                    <ul id="slider">
-                        <li><img src="images/71tTWyypTKL._AC_SX679_.jpg" alt="" title="Hammer"></li>
-                        <li><img src="images/95968_W3.jpg" alt="" title="saw"></li>
-                        <li><img src="images/STHT60083_1.jpg" alt="" title="screwdriver"></li>
-                        
-                        
-                    </ul>
-                </div>
-            </div>
+            <img src="images/aboutus.jpg" alt="" title="tools">
+            
 
         </div>
         <div id="indexCol_3">
@@ -73,6 +64,7 @@
         </div>
     </div>
 </div>
+
 
 <!--End of Content -->
 </body>
