--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,6 +4,7 @@
 
 <link href="/css/global.css" rel="stylesheet" />
 <link href="/css/profile.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="/js/main.js"></script>
 <script src="/js/profile.js"></script>
