--- a/templates/rental.html
+++ b/templates/rental.html
@@ -29,7 +29,10 @@
 <!-- Content -->
 <div id="pageContent">
 
-    <h1 id=rentalTitle>Available Tools - Browse</h1>
+    <div id="rentalTitle">
+        <h1>Available Tools - Browse</h1>
+    </div>
+    <br><br>
 
     <div class="text-box">
         <h2>Hammer</h2>
@@ -45,7 +48,7 @@
         <img src="images/95968_W3.jpg" style="width: 200px; height: 200px;" alt="Image of a Saw" >
         <p>
             Are you the type of handy person that would rather build your own wood furniture on a weekend
-            instead of watching Netflix? Or maybe not... anyways Click here to pick out a Saw to rent!
+            instead of watching Netflix? Or maybe not... anyways, Click here to pick out a Saw to rent!
         </p>
     </div>
 
