--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -43,6 +43,7 @@
             </p>
 
             <img src="images/aboutus.jpg" alt="" title="tools">
+            <p> policy rules </p>
             
 
         </div>
