profile listings added, arrows do not work yet..

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
             </p>
 
             <div class="featured">
-                <h1>Featured producted</h1>
+                <h1>Featured products</h1>
                 <div class="slider">
                     <ul id="slider">
                         <li><img src="images/71tTWyypTKL._AC_SX679_.jpg" alt="" title="Hammer"></li>
