--- a/templates/tool.html
+++ b/templates/tool.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <!-- References -->
 
-<link href="css/global.css" rel="stylesheet" />
-<link href="css/tool.css" rel="stylesheet" />
+<link href="/css/global.css" rel="stylesheet" />
+<link href="/css/tool.css" rel="stylesheet" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="js/main.js"></script>=
-<script src="js/tool.js"></script>
+<script src="/js/main.js"></script>
+<script src="/js/tool.js"></script>
 
 <!-- jQuery Modal Plugin -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
