add search bar to rental.html
Vinny I added the search bar but i cant figure out how to get it too working using javascript. I guess we are trying to filter it by the description?

--- a/templates/rental.html
+++ b/templates/rental.html
@@ -27,6 +27,15 @@
     <!-- Load with JS in main.js -->
 </div>
 <!-- Content -->
+<div id="searchBox">
+    <form id ="form" role="search">
+        <input type = "search" id="query" name="q"
+        placeholder="Search..."
+        aria-label="Search through site content">
+        <button>Search</button>
+    </form> 
+
+</div>
 <div id="pageContent">
 
     
