--- a/templates/css/rental.css
+++ b/templates/css/rental.css
@@ -29,3 +29,12 @@
     height: 100px;
 }
 
+#searchBox{
+    width: 100%;
+    height: 100%;
+    padding-top: 10px;
+    display: flex;
+    align-content: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
+}
