aboutus.html and global.css
Re organized the about us page and added css to neaten it up

(cherry picked from commit fddb1aaa74a75130e1d7bb8381c4936682f8e523)

# Conflicts:
#	templates/aboutus.html
#	templates/css/global.css

--- a/templates/css/aboutus.css
+++ b/templates/css/aboutus.css
@@ -25,7 +25,7 @@
     width: 100%;
     justify-content: center;
     background: #1781C2;
-    border-radius: 1vw;
+    border-radius: 1vw;;
 }
 
 .contentBody {
