--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -3,7 +3,6 @@
 <!-- References -->
 
 <link href="css/global.css" rel="stylesheet" />
-<link href="css/index.css" rel="stylesheet" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/main.js"></script>
 <script src="js/login.js"></script>
@@ -30,11 +29,12 @@
     <!-- Load with JS in main.js -->
 </div>
 <!-- Content -->
-<div id="pageContent">
-    <div>
-        <div id="indexCol_1">
-          
-            <h1>Insurance Plans </h1> <!-- User story #5 -->
+
+<div class="container">
+    
+    <div class="content">
+
+        <h1>Insurance Plans </h1> <!-- User story #5 -->
             <p>At Neighborly we offer solutions for insurance for your tools. Using our service we allow you to 
                 either sign up using our insurance or provide you with a third party insurance company so that you can
                 be safe at mind that your tools are protected.
@@ -54,13 +54,15 @@
                   <td>$35/month</td>
                 </tr>
               </table> 
-            
+            <br><br>
+
             <h2>Third Party Insurance</h2> <!-- User story #16 -->
             <p>
                 If you wish to use a different insurance company you may use 
                 which ever one of your preference. We have one that we recommend called 
                 insrueon if you are insterested click >><a href="https://www.insureon.com/small-business-insurance/contractors-tools-equipment">here</a>
             </p>
+            <br><br>
 
             <h2>Tool Repairs/Restoration</h2> <!-- User story #15 -->
             <p>We understands tools can get worn out after 
@@ -68,34 +70,35 @@
                 the help they need. If you need a to get your
                 tools repaired you can contact <a href="http://www.latintools.us/index.html">LATIN TOOLS</a>
             </p>
-            
-        </div>
-        <div id="indexCol_2">
-            <h1>About us</h1>
+
+    </div>
+    <div class="content">
+        
+        <h1>About us</h1>
 
             <p>Neighborly is about this community and helping serve the community. What we choose to accomplish is allowing the community to work together in finishing projects that are long over due.
                  We want to give those people a safe environment to help others and in the same process allow to make some money when their tools are not in use. 
             </p>
+            <br><br>
+            <img src="images/aboutus.jpg" alt="Man in tool shed" title="tools">
 
+    </div>
+    <div class="content">
 
-
-            <img src="images/aboutus.jpg" alt="" title="tools">
-            
-            
-
-        </div>
-        <div id="indexCol_3">
-            <h1>Delivery/Pickup</h1> <!-- User story #10 -->
+        <h1>Delivery/Pickup</h1> <!-- User story #10 -->
             <p> We allow the users to discuss where they want to meet up so they can 
                 work out what is best location for them to pick up the tools. We recommend
                 that user deliver/pickup tools at public places so that it is more safer.
             </p>
+            <br><br>
+
              <h2>Shipping</h2>  <!-- User story #9 -->
             <p> We currently do not provide a shipping but that does not stop the renter 
                 for renting their tools to someone in a different location. If users choose
                 to ship their tools know that they can do so and can use USPS, UPS or FEDEX.
                 we recommend if users choose to do this to have insurance on their tools.
             </p>
+            <br><br>
 
             <h1>Pickup hub/locker</h1> <!-- User story #11 -->
             <p>As time goes on we plan on allowing our users to be able to drop off there tools
@@ -103,9 +106,8 @@
                 easier and safe pick ups and will be at major locations. This feature will be coming soon.
             </p>
 
-
-        </div>
     </div>
+
 </div>
 
 
