aboutus.html and global.css
Re organized the about us page and added css to neaten it up

(cherry picked from commit fddb1aaa74a75130e1d7bb8381c4936682f8e523)

# Conflicts:
#	templates/aboutus.html
#	templates/css/global.css

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -117,7 +117,7 @@
                 <h1 class="contentTitle">Pickup hub/locker</h1> <!-- User story #11 -->
                 <p class="contentBody">As time goes on we plan on allowing our users to be able to drop off there tools
                     so that the renter can come and pick up the tool they rented. This will allow for
-                    easier and safe pick ups and will be at major locations. This feature will be coming soon..
+                    easier and safe pick ups and will be at major locations. This feature will be coming soon.
                 </p>
             </div>
 
