implemented search function

--- a/templates/rental.html
+++ b/templates/rental.html
@@ -28,12 +28,10 @@
 </div>
 <!-- Content -->
 <div id="searchBox">
-    <form id ="form" role="search">
-        <input type = "search" id="query" name="q"
-        placeholder="Search..."
-        aria-label="Search through site content">
-        <button>Search</button>
-    </form> 
+    <input type = "search" id="txtQuery" name="q"
+    placeholder="Search..."
+    aria-label="Search through site content">
+    <button type="button" id="btnSearch">Search</button>
 
 </div>
 <div id="pageContent">
