--- a/templates/rental.html
+++ b/templates/rental.html
@@ -28,10 +28,8 @@
 </div>
 <!-- Content -->
 <div id="searchBox">
-    <input type = "search" id="txtQuery" name="q"
-    placeholder="Search..."
-    aria-label="Search through site content">
-    <button type="button" id="btnSearch">Search</button>
+    <input type="text" id="txtQuery" name="q" placeholder="Search..." aria-label="Search through site content"/>
+    <input type="button" id="btnSearch" value="Search" />
 
 </div>
 <div id="pageContent">
