--- a/templates/tool.html
+++ b/templates/tool.html
@@ -31,7 +31,9 @@
 </div>
 <!-- Content -->
 <div id="pageContent">
-    <div id="toolID"></div>
+    <div class="toolImageContainer">
+
+    </div>
 </div>
 
 <!--End of Content -->
